@@ -1,3 +1,12 @@
+2006-04-25 07:08  bchiara
+
+	* configure.in, src/Makefile.am, src/thread_resolve.c: changes to
+	work with system without test built-in
+
+2006-04-16 11:04  bchiara
+
+	* ChangeLog, TODO: updated TODO
+
 2006-04-16 10:56  bchiara
 
 	* AUTHORS, ChangeLog, NEWS, html/FAQ.html, html/NEWS.html: Updated
